--------
v1.0-git
--------

[jan] Add Latvian translation (Jānis Eisaks <jancs@dv.lv>).
[jan] Provide default configuration files instead of .dist versions.
[bak/mjr/mms] Converted to H4.
[jan] Enable output compression.
[cjh] Remove the Jonah-specific portal (Bug #7584).
[cjh] Add support for full-content feeds (Request #6400).
[cjh] Remove delivery lists.
[jan] Add Turkish translation (METU <horde-tr@metu.edu.tr>).
[mjr] Add a media block for displaying feeds containing media namespace nodes.
[mjr] Add support for parsing the media namespace extensions to RSS 2.0 feeds.
[mjr] Add searchTag api support to allow other applications to list tags and
      perform tag searches of Jonah resources.
[mjr] Add tagging support for internal channels.
[cjh] Allow the story and latest blocks to count story reads.
[cjh] Add PDF generation of stories.
[cjh] Detect charset information from XML prologue as well as the
      Content-Type header (s_gatterbauer@idlm.net, Bug #4340).
[jan] Add RSS 2.0 feed generator.
[jan] Add permalink field for stories.
[jan] Add URL field to channel configuration for paged story lists.
[cjh] Deliver RSS feeds in a way that supports USM
      (http://www.kbcafe.com/rss/usm.html, Request #2593).
[cjh] Standardize the date fields for stories with an updated field that is
      always the timestamp that the story was last modified, and a published
      field which is controlled by the author and determines the release date.
[ben] Better support for MS-SQL.
[cjh] Use Horde_Block_Layout_View for the My News page.
[cjh] Add jonah:admin permission (tevans@tachometry.com, Bug #2571).
[cjh] Add internal template type for internal stories (tevans@tachometry.com,
      Bug #2571).
[cjh] Add a block for showing the latest story from an internal channel
      (Roel Gloudemans <roel@gloudemans.info>).
[cjh] Initial feeds script now uses Jonah objects to do feed
      creation to avoid sequence problems.